--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_quickom_widget
 description: "A new Flutter project."
 version: 0.0.1
 homepage: https://quickom.com
-
+repository: https://github.com/pf2707/flutter_quickom_widget
 
 environment:
   sdk: '>=3.4.0 <4.0.0'
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  webview_flutter:
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
